# fcp-regex

./: .mcp.json  CLAUDE.md  Cargo.toml  Makefile  README.md
.claude-plugin/: plugin.json
.github/workflows/: release.yml
fcp-regex-core/: Cargo.toml
fcp-regex-core/src/: lib.rs  parse.rs
fcp-regex-core/src/domain/: mod.rs  model.rs  mutation.rs  query.rs
fcp-regex-core/src/elements/: mod.rs
scripts/: run.sh
sessions/decompose-20260305/: 01_understanding.md  02_manifest.md
site/: install.sh
src/: bridge.rs  lib.rs  main.rs  reference_card.rs
src/domain/: compiler.rs  model.rs  mutation.rs  query.rs
src/elements/: mod.rs
src/fcpcore/: event_log.rs  formatter.rs  parsed_op.rs  session.rs  tokenizer.rs  verb_registry.rs
src/mcp/: server.rs
tests/: workflow_explain.rs  workflow_library.rs  workflow_semver.rs  workflow_undo_redo.rs  workflow_userinfo.rs
