[workspace]
resolver = "2"
members = [".", "fcp-regex-core"]

[package]
name = "fcp-regex"
version = "0.1.1"
edition = "2021"
description = "MCP server for regex construction via named fragment composition"
repository = "https://github.com/aetherwing-io/fcp-regex"
license = "MIT"

[dependencies]
fcp-regex-core = { path = "fcp-regex-core" }
rmcp = { version = "0.14", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
regex = "1"
