[package]
name = "fcp-regex-core"
version = "0.1.0"
edition = "2021"
description = "Core regex fragment composition library — no MCP/server dependencies"
repository = "https://github.com/aetherwing-io/fcp-regex"
license = "MIT"

[dependencies]
regex-syntax = "0.8"
regex = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
